--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,18 @@
   </head>
 
   <body>
+  	<% flash.each do |key, value| %> 
+	  <div class="alert alert-<%= key %> fade in">
+	    <a href="#" data-dismiss="alert" class="close">×</a>
+	      <ul>
+	        <% value.each do |message| %>
+	        	<li>
+	          		<%= message %>
+	        	</li>
+	        <% end %>
+	      </ul>
+	  </div>
+  	<% end %>
     <%= yield %>
   </body>
 </html>
