--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "pickadate/default";
+@import "pickadate/default.date";
+@import "pickadate/default.time";
+
