--- a/app/views/channels/_form.html.erb
+++ b/app/views/channels/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @channel do |f| %>
 <%= f.text_field :name %>
-<%= f.label "Tipo de Canal", :name %>
+<%= f.label :name, "Tipo de Canal" %>
 <%= f.submit "Crear" %>
 <% end %>
