--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 	  <div class="alert alert-<%= key %> fade in">
 	    <a href="#" data-dismiss="alert" class="close">×</a>
 	      <ul>
-	        <% value.each do |message| %>
+	        <% (value.class != Array ? [value] : value).each do |message| %>
 	        	<li>
 	          		<%= message %>
 	        	</li>
