--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,44 @@
   </head>
 
   <body>
+
+<% if current_user %>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Prosalud</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <% if false %>
+
+          <li class="<%= 'active' if params[:controller] == 'clients' %>"> <%= link_to "Clientes", clients_path %> </li>
+          <li class="<%= 'active' if params[:controller] == 'therapists' %>"><%= link_to "Terapeutas", teraphists_path %></li>
+          <li class="<%= 'active' if params[:controller] == 'appointments' %>"><%= link_to "Citas", appoinments_path %></li>
+
+          <% end %>
+
+          <li class="<%= 'active' if params[:controller] == 'clients' %>"> <a href="#">Page 1</a></li>
+          <li class="<%= 'active' if params[:controller] == 'therapists' %>"><a href="#">Page 2</a></li>
+          <li class="<%= 'active' if params[:controller] == 'appointments' %>"><a href="#">Page 3</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to raw('<span class="glyphicon glyphicon-log-in"></span> Log Out'), destroy_user_session_path, method: :delete %> </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+<% end %>
+
   	<% flash.each do |key, value| %> 
 	  <div class="alert alert-<%= key %> fade in">
 	    <a href="#" data-dismiss="alert" class="close">×</a>
