Added clients controller and edit and new views. Added jquery autocomplete gem and styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "jquery.ui.all";
 @import "pickadate/default";
 @import "pickadate/default.date";
 @import "pickadate/default.time";
