--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -2,6 +2,12 @@
   <h1>Clientes</h1>
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <%= link_to "Agrear Nuevo", new_client_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <table class="table table-striped table-hover">
         <thead>
           <tr>
