--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,9 +16,10 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
 
-          <li class="<%= 'active' if params[:controller] == 'clients' %>"> <%= link_to "Clientes", channels_path %> </li>
-          <li class="<%= 'active' if params[:controller] == 'therapists' %>"><%= link_to "Terapeutas", channels_path %></li>
-          <li class="<%= 'active' if params[:controller] == 'appointments' %>"><%= link_to "Citas", channels_path %></li>
+          <li class="<%= 'active' if params[:controller] == 'clients' %>"> <%= link_to "Clientes", clients_path %> </li>
+          <li class="<%= 'active' if params[:controller] == 'services' %>"><%= link_to "Servicios", services_path %></li>
+          <li class="<%= 'active' if params[:controller] == 'channels' %>"><%= link_to "Metodos de contacto", channels_path %></li>
+          <li class="<%= 'active' if params[:controller] == 'schedules' %>"><%= link_to "Horarios", schedules_path %></li>
           <li><%= link_to raw('<span class="glyphicon glyphicon-log-in"></span> Log Out'), destroy_user_session_path, method: :delete %> </li>
 
         <% else %>
