--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Servicios</h1>
+<%= link_to "Agrear Nuevo", new_service_path %>
 <% @services.each do |service| %>
   <h2><%= service.name %></h2>
   <%= link_to "Mostrar", service_path(service) %>
