--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -1,8 +1,46 @@
-<h1>Metodos de Contacto</h1>
-<%= link_to "Agrear Nuevo", new_channel_path %>
-<% @channels.each do |channel| %>
-	<h2><%= channel.name %></h2>
-	<%= link_to "Mostrar", channel_path(channel) %>
-	<%= link_to "Editar", edit_channel_path(channel) %>
-	<%= link_to "Eliminar", channel_path(channel), method: :delete %>
-<% end %>
+<div class="container">
+  <h1>Formas de Contacto</h1>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <%= link_to "Agrear Nuevo", new_channel_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th style="text-align:center">Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @channels.each do |channel| %>
+            <tr>
+              <td style="width:80%"><%= channel.name %></td>
+              <td align="center">
+                  <%= link_to edit_channel_path(channel), class: "btn btn-default" do %><%= image_tag "rsz_edit.png", class: "img-responsive" %><% end %>
+                  <%= link_to channel_path(channel), class: "btn btn-default", method: :delete, data:{ confirm: "¿Estas seguro que desea eliminar la forma " + channel.name + "?" } do %><%= image_tag "rsz_trash.png", class: "img-responsive" %><% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<script>
+  $('.table').DataTable({
+    // ajax: ...,
+    // autoWidth: false,
+    // pagingType: 'full_numbers',
+    // processing: true,
+    // serverSide: true,
+
+    // Optional, if you want full pagination controls.
+    // Check dataTables documentation to learn more about available options.
+    // http://datatables.net/reference/option/pagingType
+  });
+</script>
