--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,9 +1,52 @@
-<h1>Horarios</h1>
-<%= link_to "Agrear Nuevo", new_schedule_path %>
-<% @schedules.each do |schedule| %>
-  <h2><%= schedule.week_day %></h2>
-  <h3><%= schedule.start_date %> - <%= schedule.end_date %></h3>
-  <%= link_to "Mostrar", schedule_path(schedule) %>
-  <%= link_to "Editar", edit_schedule_path(schedule) %>
-  <%= link_to "Borrar", schedule_path(schedule), method: :delete %>
-<% end %>
+<div class="container">
+  <h1>Horarios</h1>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <%= link_to "Agrear Nuevo", new_schedule_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th>Terapeuta</th>
+            <th>Día</th>
+            <th>Hora Inicio</th>
+            <th>Hora Fin</th>
+            <th style="text-align:center">Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @schedules.each do |schedule| %>
+            <tr>
+              <td><%= schedule.therapist.user.name %></td>
+              <td><%= schedule.week_day %></td>
+              <td><%= schedule.start_time %></td>
+              <td><%= schedule.end_time %></td>
+              <td align="center">
+                  <%= link_to edit_schedule_path(schedule), class: "btn btn-default" do %><%= image_tag "rsz_edit.png", class: "img-responsive" %><% end %>
+                  <%= link_to schedule_path(schedule), class: "btn btn-default", method: :delete, data:{ confirm: "¿Estas seguro que desea eliminar el horario del dia " + schedule.week_day + "?" } do %><%= image_tag "rsz_trash.png", class: "img-responsive" %><% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<script>
+  $('.table').DataTable({
+    // ajax: ...,
+    // autoWidth: false,
+    // pagingType: 'full_numbers',
+    // processing: true,
+    // serverSide: true,
+
+    // Optional, if you want full pagination controls.
+    // Check dataTables documentation to learn more about available options.
+    // http://datatables.net/reference/option/pagingType
+  });
+</script>
