--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -1,31 +1,21 @@
 <%= form_for @service do |f| %>
-  <div class="row">
-    <div class="form-group">
-      <%= f.label :name, "Nombre de servicio" %>
-      <%= f.text_field :name %>
-    </div>
+<div class="row">
+  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+    <%= f.label :name, "Nombre" %>
+    <%= f.text_field :name, class: "form-control", placeholder: "Glucosa"  %>
   </div>
-
-  <div class="row">
-    <div class="form-group">
-      <%= f.label :initial_price, "Precio Inicial" %>
-      <%= f.text_field :initial_price %>
-    </div>
+  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+    <%= f.label :initial_price, "Precio Inicial" %>
+    <%= f.text_field :initial_price, class: "form-control", placeholder: "$100.00"  %>
   </div>
-
-  <div class="row">
-    <div class="form-group">
-      <%= f.label :subsequent_price, "Precio Subsequente" %>
-      <%= f.text_field :subsequent_price %>
-    </div>
+  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+    <%= f.label :subsequent_price, "Precio Subsequente" %>
+    <%= f.text_field :subsequent_price, class: "form-control", placeholder: "$100.00"  %>
   </div>
-
-  <div class="row">
-    <div class="form-group">
-      <%= f.label :community_price, "Precio de la comunidad" %>
-      <%= f.text_field :community_price %>
-    </div>
+  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+    <%= f.label :community_price, "Precio Comunidad" %>
+    <%= f.text_field :community_price, class: "form-control", placeholder: "$100.00" %>
   </div>
-
-  <%= f.submit "Crear" %>
+</div>
+<%= f.submit ( f.object.new_record? ? "Crear" : "Editar"), class: "btn btn-primary" %>
 <% end %>
