--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,8 +1,52 @@
-<h1>Servicios</h1>
-<%= link_to "Agrear Nuevo", new_service_path %>
-<% @services.each do |service| %>
-  <h2><%= service.name %></h2>
-  <%= link_to "Mostrar", service_path(service) %>
-  <%= link_to "Editar", edit_service_path(service) %>
-  <%= link_to "Borrar", service_path(service), method: :delete %>
-<% end %>
+<div class="container">
+  <h1>Servicios</h1>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <%= link_to "Agrear Nuevo", new_service_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th>Precio Inicial</th>
+            <th>Precio Subsequente</th>
+            <th>Precio Comunidad</th>
+            <th style="text-align:center">Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @services.each do |service| %>
+            <tr>
+              <td><%= service.name %></td>
+              <td><%= service.initial_price %></td>
+              <td><%= service.subsequent_price %></td>
+              <td><%= service.community_price %></td>
+              <td align="center">
+                  <%= link_to edit_service_path(service), class: "btn btn-default" do %><%= image_tag "rsz_edit.png", class: "img-responsive" %><% end %>
+                  <%= link_to service_path(service), class: "btn btn-default", method: :delete, data:{ confirm: "¿Estas seguro que desea eliminar el servicio " + service.name + "?" } do %><%= image_tag "rsz_trash.png", class: "img-responsive" %><% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<script>
+  $('.table').DataTable({
+    // ajax: ...,
+    // autoWidth: false,
+    // pagingType: 'full_numbers',
+    // processing: true,
+    // serverSide: true,
+
+    // Optional, if you want full pagination controls.
+    // Check dataTables documentation to learn more about available options.
+    // http://datatables.net/reference/option/pagingType
+  });
+</script>
