--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,4 +1,57 @@
-.navbar-inverse {
-    //background-color: #2E9AFE !important;
-    //border-color: #252525 !important;
+
+/* Navbar background */
+
+.navbar.navbar-inverse {
+    background-color: #5C79AA;
+}
+
+/* Navbar title */
+
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+
+/* Focus/hover state for title */
+
+.navbar-inverse .navbar-brand:hover,
+.navbar-inverse .navbar-brand:focus {
+    color: #D3DCEA;
+}
+
+/* Navbar links */
+
+.navbar-inverse .navbar-nav > li > a {
+    color: white;
+}
+
+/* Navbar links hover/focus states */
+
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus {
+    color: #D3DCEA;
+}
+
+.navbar-inverse .navbar-nav > .active > a, 
+.navbar-inverse .navbar-nav > .active > a:hover, 
+.navbar-inverse .navbar-nav > .active > a:focus {
+    color: #555;
+    background-color: #D3DCEA;
+}
+
+/* Mobile toggle button border */
+
+.navbar-inverse .navbar-toggle {
+    border-color: lightgreen;
+}
+
+/*Mobile toggle button hover/focus*/
+
+.navbar-inverse .navbar-toggle:hover,
+.navbar-inverse .navbar-toggle:focus {
+    background-color: slategray;
+}
+
+/* Mobile icon bar colors */
+.navbar-inverse .navbar-toggle .icon-bar {
+    background-color: #CCC;
 }
