--- a/app/views/treatments/_form.html.erb
+++ b/app/views/treatments/_form.html.erb
@@ -16,7 +16,7 @@
   <div class="row">
     <div class="col-xs-4 col-sm-4 col-lg-4 form-group">
       <%= f.label "Cliente" %>
-      <%= f.select(:client_id, @clients.collect {|c| [ c.fname + " " + c.lname ] }) %>
+      <%= f.select(:client_id, Client.all.collect {|c| [ c.fname + " " + c.lname, c.id ] } , class:"form-control") %>
 
     </div>
   </div>
@@ -24,13 +24,12 @@
   <div class="row">
     <div class="col-xs-4 col-sm-4 col-lg-4 form-group">
       <%= f.label "Terapeuta" %>
-      <%= f.select(:therapist_id, @therapists.collect {|c| [ c.id] }) %>
+      <%= f.select(:therapist_id, Therapist.all.collect {|t| [ t.name, t.id] } , class:"form-control") %>
     </div>
   </div>
 
   <%= f.submit "Crear" %>
 <% end %>
-
 
 
 <script type="text/javascript">
