--- a/app/views/treatments/index.html.erb
+++ b/app/views/treatments/index.html.erb
@@ -1,8 +1,40 @@
-<h1>Treatments</h1>
-<%= link_to "Agrear Nuevo", new_treatment_path %>
-<% @treatments.each do |treatment| %>
-  <h2><%= treatment.start_date %></h2>
-  <%= link_to "Mostrar", treatment_path(treatment) %>
-  <%= link_to "Edit", edit_treatment_path(treatment) %>
-  <%= link_to "Destroy", treatment_path(treatment), method: :delete %>
-<% end %>
+
+<div class="container">
+  <h1>Tratamientos</h1>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <%= link_to "Agrear Nuevo", new_treatment_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th>Cliente</th>
+            <th>Terapeuta</th>
+            <th>Fecha de Inicio</th>
+            <th>Fecha de Terminación</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @treatments.each do |treatment| %>
+            <tr>
+              <td><%= treatment.client.fname + " " + treatment.client.lname %></td>
+              <td><%= treatment.therapist.name %></td>
+              <td><%= treatment.start_date %></td>
+              <td><%= treatment.end_date %></td>
+              <td>
+                <%= link_to "Editar", edit_treatment_path(treatment) %>
+                <%= link_to "Borrar", treatment_path(treatment), method: :delete %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  
+</div>
