--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "pickadate/default";
 @import "pickadate/default.date";
 @import "pickadate/default.time";
+@import "dataTables/jquery.dataTables";
 @import "global";
 @import "dataTables";
 
