--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -6,15 +6,15 @@
   </div>
   <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
     <%= f.label :start_time, "Hora de inicio" %>
-    <%= f.text_field :start_time, class: "form-control timepicker", placeholder: "Consultorio 1"  %>
+    <%= f.text_field :start_time, class: "form-control timepicker", placeholder: "09:00"  %>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
     <%= f.label :end_time, "Hora de fin" %>
-    <%= f.text_field :end_time, class: "form-control timepicker", placeholder: "Consultorio 1"  %>
+    <%= f.text_field :end_time, class: "form-control timepicker", placeholder: "13:00"  %>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
     <%= f.label :therapist_id, "Terapeuta" %>
-    <%= f.select :therapist_id, Therapist.all.collect { |c| [ c.user.name, c.id ] }, {}, class: "form-control" %>
+    <%= f.select :therapist_id, @therapists.collect { |c| [ c.user.name, c.id ] }, {}, class: "form-control" %>
   </div>
 </div>
 <%= f.submit ( f.object.new_record? ? "Crear" : "Editar"), class: "btn btn-primary" %>
