--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,13 +16,25 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
 
-          <li class="<%= 'active' if params[:controller] == 'users' %>"> <%= link_to "Usuarios", users_path %> </li>
-          <li class="<%= 'active' if params[:controller] == 'clients' %>"> <%= link_to "Clientes", clients_path %> </li>
-          <li class="<%= 'active' if params[:controller] == 'services' %>"><%= link_to "Servicios", services_path %></li>
-          <li class="<%= 'active' if params[:controller] == 'channels' %>"><%= link_to "Metodos de contacto", channels_path %></li>
-          <li class="<%= 'active' if params[:controller] == 'schedules' %>"><%= link_to "Horarios", schedules_path %></li>
-          <li class="<%= 'active' if params[:controller] == 'client_appointments' %>"><%= link_to "Citas", client_appointments_path %></li>
-          <li><%= link_to raw('<span class="glyphicon glyphicon-log-in"></span> Log Out'), destroy_user_session_path, method: :delete %> </li>
+          <% if current_user.has_role? :admin %>
+              <li class="<%= 'active' if params[:controller] == 'users' %>"> <%= link_to "Usuarios", users_path %> </li>
+              <li class="<%= 'active' if params[:controller] == 'clients' %>"> <%= link_to "Clientes", clients_path %> </li>
+              <li class="<%= 'active' if params[:controller] == 'services' %>"><%= link_to "Servicios", services_path %></li>
+              <li class="<%= 'active' if params[:controller] == 'channels' %>"><%= link_to "Metodos de contacto", channels_path %></li>
+              <li class="<%= 'active' if params[:controller] == 'schedules' %>"><%= link_to "Horarios", schedules_path %></li>
+              <li class="<%= 'active' if params[:controller] == 'client_appointments' %>"><%= link_to "Citas", client_appointments_path %></li>
+              <li><%= link_to raw('<span class="glyphicon glyphicon-log-in"></span> Log Out'), destroy_user_session_path, method: :delete %> </li>
+
+            <% elsif current_user.has_role? :receptionist %>
+              <li class="<%= 'active' if params[:controller] == 'clients' %>"> <%= link_to "Clientes", clients_path %> </li>
+              <li class="<%= 'active' if params[:controller] == 'client_appointments' %>"><%= link_to "Citas", client_appointments_path %></li>
+              <li><%= link_to raw('<span class="glyphicon glyphicon-log-in"></span> Log Out'), destroy_user_session_path, method: :delete %> </li>
+
+            <% elsif current_user.has_role? :therapist %>
+              <li class="<%= 'active' if params[:controller] == 'schedules' %>"><%= link_to "Horarios", schedules_path %></li>
+              <li class="<%= 'active' if params[:controller] == 'client_appointments' %>"><%= link_to "Citas", client_appointments_path %></li>
+              <li><%= link_to raw('<span class="glyphicon glyphicon-log-in"></span> Log Out'), destroy_user_session_path, method: :delete %> </li>
+          <% end %>
 
         <% else %>
           <li><%= link_to 'Login', new_user_session_path %></li>
