--- a/app/views/client_appointments/index.html.erb
+++ b/app/views/client_appointments/index.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <%= link_to "Agregar", new_client_appointment_path, class: "btn btn-primary" %>
-      <%= link_to "Enlazar Google Calendar", redirect_path, class: "btn btn-primary" %>
+      <%= link_to "Sincronizar con Google Calendar", redirect_path, class: "btn btn-primary pull-right" %>
     </div>
   </div>
   <br>
