--- a/app/views/consulting_rooms/index.html.erb
+++ b/app/views/consulting_rooms/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Consultorios</h1>
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <%= link_to "Agrear Nuevo", new_consulting_room_path, class: "btn btn-primary" %>
+      <%= link_to "Agregar Nuevo", new_consulting_room_path, class: "btn btn-primary" %>
     </div>
   </div>
   <br>
