--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -21,11 +21,11 @@
       <thead>
         <tr>
           <th>Consultas totales</th>
-          <th>Consultas de psicología</th>
-          <th>Consultas de nutrición</th>
+          <th>Consultas de Psicología</th>
+          <th>Consultas de Nutrición</th>
           <th>Ingreso Total</th>
-          <th>Ingreso de psicología</th>
-          <th>Ingreso de nutrición</th>
+          <th>Ingreso de Psicología</th>
+          <th>Ingreso de Nutrición</th>
         </tr>
       </thead>
       <tbody>
@@ -35,7 +35,7 @@
           <th><%= @appointments.map(&:appointment_type).count("nutriologo") %></th>
           <th>$<%= @appointments.sum("price") %></th>
           <th>$<%= @appointments.where(therapist_id: Therapist.all.where(therapist_type: "psicologo").map(&:id)).sum("price") %></th>
-          <th><%= @appointments.where(therapist_id: Therapist.all.where(therapist_type: "nutriologo").map(&:id)).sum("price") %></th>
+          <th>$<%= @appointments.where(therapist_id: Therapist.all.where(therapist_type: "nutriologo").map(&:id)).sum("price") %></th>
         </tr>
       </tbody>
     </table>
