--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -40,5 +40,42 @@
       </tbody>
     </table>
     </div>
+
+    <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>Paciente</th>
+          <th class="text-center">Folio</th>
+          <th class="text-center">Asistencias</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @appointments.group(:client_id).count.each do |key, value| %>
+            <tr>
+              <td ><%= Client.find(key).full_name %></td>
+              <td class="text-center"><%= Client.find(key).folio %></td>
+              <td class="text-center"><%= value %></td>
+            </tr>
+        <% end %>
+      </tbody>
+    </table>
+    </div>
+
   </div>
 </div>
+
+<script>
+  $('table').DataTable({
+    // ajax: ...,
+    // autoWidth: false,
+    // pagingType: 'full_numbers',
+    // processing: true,
+    // serverSide: true,
+
+    // Optional, if you want full pagination controls.
+    // Check dataTables documentation to learn more about available options.
+    // http://datatables.net/reference/option/pagingType
+  });
+</script>
