--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -41,6 +41,7 @@
     </table>
     </div>
 
+    <h1>Consultas por Cliente</h1>
     <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <table class="table table-striped table-hover">
@@ -56,6 +57,29 @@
             <tr>
               <td ><%= Client.find(key).full_name %></td>
               <td class="text-center"><%= Client.find(key).folio %></td>
+              <td class="text-center"><%= value %></td>
+            </tr>
+        <% end %>
+      </tbody>
+    </table>
+    </div>
+
+    <h1>Consultas por Terapeuta por Paciente</h1>
+    <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>Terapeuta</th>
+          <th>Paciente</th>
+          <th class="text-center">Consultas</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @appointments.all.group([:therapist_id, :client_id]).order(:therapist_id).count.each do |key, value| %>
+            <tr>
+              <td ><%= Therapist.find(key[0]).user.name %></td>
+              <td ><%= Client.find(key[1]).full_name %></td>
               <td class="text-center"><%= value %></td>
             </tr>
         <% end %>
