--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,8 @@
               <li class="<%= 'active' if params[:controller] == 'channels' %>"><%= link_to "Metodos de contacto", channels_path %></li>
               <li class="<%= 'active' if params[:controller] == 'schedules' %>"><%= link_to "Horarios", schedules_path %></li>
               <li class="<%= 'active' if params[:controller] == 'client_appointments' %>"><%= link_to "Citas", client_appointments_path %></li>
+              <li class="<%= 'active' if params[:controller] == 'consulting_rooms' %>"><%= link_to "Consultorios", consulting_rooms_path %></li>
+              <li class="<%= 'active' if params[:controller] == 'reports' %>"><%= link_to "Reportes", reports_path %></li>                            
               <li><%= link_to raw('<span class="glyphicon glyphicon-log-in"></span> Log Out'), destroy_user_session_path, method: :delete %> </li>
 
             <% elsif current_user.has_role? :receptionist %>
