--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -8,7 +8,7 @@
   <br>
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <table class="table table-striped table-hover">
+      <table class="table table-striped table-hover" id="table-channels">
         <thead>
           <tr>
             <th>Nombre</th>
@@ -32,15 +32,18 @@
 </div>
 
 <script>
-  $('.table').DataTable({
-    // ajax: ...,
-    // autoWidth: false,
-    // pagingType: 'full_numbers',
-    // processing: true,
-    // serverSide: true,
-
-    // Optional, if you want full pagination controls.
-    // Check dataTables documentation to learn more about available options.
-    // http://datatables.net/reference/option/pagingType
-  });
+  var table_channels = null
+    document.addEventListener("turbolinks:load", function() {
+      if($('#table-channels_wrapper').length == 0){
+        table_channels = $('#table-channels').DataTable({
+            "pageLength": 5,
+            "lengthMenu": [ 5, 10, 25, 50, 75, 100 ],
+            "stateSave" : true,
+          });
+      }
+    });
+    document.addEventListener("turbolinks:before-cache", function() {
+      if($('#table-channels_wrapper').length == 1)
+        table_channels.destroy()
+    });
 </script>
