--- a/app/views/client_appointments/index.html.erb
+++ b/app/views/client_appointments/index.html.erb
@@ -9,7 +9,7 @@
   <br>
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <table class="table table-striped table-hover">
+      <table class="table table-striped table-hover" id="table-client_appointments">
         <thead>
           <tr>
             <th>Cliente</th>
@@ -56,15 +56,18 @@
 </div>
 
 <script>
-  $('table').DataTable({
-    // ajax: ...,
-    // autoWidth: false,
-    // pagingType: 'full_numbers',
-    // processing: true,
-    // serverSide: true,
-
-    // Optional, if you want full pagination controls.
-    // Check dataTables documentation to learn more about available options.
-    // http://datatables.net/reference/option/pagingType
-  });
+  var table_client_appointments = null
+    document.addEventListener("turbolinks:load", function() {
+      if($('#table-client_appointments_wrapper').length == 0){
+        table_client_appointments = $('#table-client_appointments').DataTable({
+            "pageLength": 5,
+            "lengthMenu": [ 5, 10, 25, 50, 75, 100 ],
+            "stateSave" : true,
+          });
+      }
+    });
+    document.addEventListener("turbolinks:before-cache", function() {
+      if($('#table-client_appointments_wrapper').length == 1)
+        table_client_appointments.destroy()
+    });
 </script>
