--- a/app/views/consulting_rooms/index.html.erb
+++ b/app/views/consulting_rooms/index.html.erb
@@ -8,7 +8,7 @@
   <br>
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <table class="table table-striped table-hover">
+      <table class="table table-striped table-hover" id="table-consulting_rooms">
         <thead>
           <tr>
             <th>Nombre</th>
@@ -32,3 +32,19 @@
     </div>
   </div>
 </div>
+<script>
+  var table_consulting_rooms = null
+    document.addEventListener("turbolinks:load", function() {
+      if($('#table-consulting_rooms_wrapper').length == 0){
+        table_consulting_rooms = $('#table-consulting_rooms').DataTable({
+            "pageLength": 5,
+            "lengthMenu": [ 5, 10, 25, 50, 75, 100 ],
+            "stateSave" : true,
+          });
+      }
+    });
+    document.addEventListener("turbolinks:before-cache", function() {
+      if($('#table-consulting_rooms_wrapper').length == 1)
+        table_consulting_rooms.destroy()
+    });
+</script>
